; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/tcop/extr_utility.c_CheckRestrictedOperation.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/tcop/extr_utility.c_CheckRestrictedOperation.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ERROR = common dso_local global i32 0, align 4
@ERRCODE_INSUFFICIENT_PRIVILEGE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [55 x i8] c"cannot execute %s within security-restricted operation\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @CheckRestrictedOperation to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @CheckRestrictedOperation(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = call i64 (...) @InSecurityRestrictedOperation()
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %12

5:                                                ; preds = %1
  %6 = load i32, i32* @ERROR, align 4
  %7 = load i32, i32* @ERRCODE_INSUFFICIENT_PRIVILEGE, align 4
  %8 = call i32 @errcode(i32 %7)
  %9 = load i8*, i8** %2, align 8
  %10 = call i32 @errmsg(i8* getelementptr inbounds ([55 x i8], [55 x i8]* @.str, i64 0, i64 0), i8* %9)
  %11 = call i32 @ereport(i32 %6, i32 %10)
  br label %12

12:                                               ; preds = %5, %1
  ret void
}

declare dso_local i64 @InSecurityRestrictedOperation(...) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errcode(i32) #1

declare dso_local i32 @errmsg(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
